# xplorertui

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/tui-skeleton/: SKILL.md
.github/workflows/: ci.yml  claude-code-review.yml  claude.yml  codeql.yml
mlx-server/: CLAUDE.md  pyproject.toml  registry.py  schemas.py  server.py
mlx-server/.claude/skills/mlx-server/: SKILL.md
mlx-server/.claude/skills/mlx-server/references/: model-compatibility.md
src/: app.rs  cli.rs  clipboard.rs  command.rs  config.rs  event.rs  main.rs
src/api/: engagement.rs  mod.rs  tweets.rs  types.rs  users.rs
src/app/: auth.rs  commands.rs  dispatch.rs  event_handlers.rs  key_handlers.rs  mod.rs  navigation.rs
src/auth/: credentials.rs  mod.rs  oauth1.rs  oauth2_pkce.rs
src/embeddings/: cluster.rs  mod.rs  reduce.rs  similarity.rs
src/huggingface/: client.rs  types.rs
src/mlx/: client.rs  media.rs  mod.rs
src/openrouter/: auth.rs  client.rs  mod.rs  types.rs
src/ui/: bookmarks.rs  cluster.rs  command_bar.rs  error_popup.rs  help.rs  hf_models.rs  input.rs  mod.rs  models.rs  search.rs  skeleton.rs  status_bar.rs  text.rs  thread.rs  timeline.rs  tweet.rs  user.rs
