[project]
name = "mlx-embedding-server"
version = "0.1.0"
description = "Local MLX embedding server for xplorertui"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "mlx-embeddings @ git+https://github.com/Blaizzy/mlx-embeddings.git@v0.1.0",
    "mlx-vlm>=0.4.0",
    "mlx>=0.31.0",
    "numpy>=1.26.0",
]

[project.scripts]
mlx-embedding-server = "server:main"
