[project]
name = "mlx-embedding-server"
version = "0.1.0"
description = "Local MLX embedding server for xplorertui"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "mlx-embeddings @ git+https://github.com/Blaizzy/mlx-embeddings.git@v0.1.0",
    "mlx-lm==0.31.2",
    "mlx-optiq==0.0.4",
    "mlx-vlm>=0.4.4",
    "mlx>=0.31.0",
    "numpy>=1.26.0",
    "httpx>=0.27.0",
    # Pin to a known-good pre-5.5 release until the upstream
    # `ReasoningEffort`/`mistral_common` loader regression is resolved for
    # Gemma 4 AutoProcessor paths.
    "transformers==5.3.0",
]

[tool.fastapi]
entrypoint = "server:app"
